# yices2

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
doc/manual/: manual.tex
examples/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  Config.cmake.in  Makefile  version.cmake
src/api/: context_config.c  platform.h  search_parameters.c  smt_logic_codes.c  yices_api.c  yices_error.c  yices_error_report.h  yices_error_report_posix.c  yices_error_report_win.c  yices_globals.h  yices_release_version.c  yices_version_template.txt
src/context/: common_conjuncts.c  conditional_definitions.c  context.c  context_printer.c  context_simplifier.c  context_simplifier.h  context_solver.c  context_statistics.c  dump_context.c  eq_learner.c  internalization_printer.c  internalization_table.c  quant_context.c  quant_context_utils.c  symmetry_breaking.c
src/exists_forall/: ef_analyze.c  ef_client.c  ef_skolemize.c  ef_values.c  efsolver.c
src/frontend/: yices_sat.c  yices_sat_new.c  yices_smt.c  yices_smt2.c  yices_smtcomp.c
src/frontend/common/: assumption_table.c  assumptions_and_core.c  bug_report.c  bug_report.h  parameters.c
src/frontend/smt1/: smt_hash_keywords.h  smt_lexer.c  smt_parser.c  smt_term_stack.c
src/frontend/smt2/: attribute_values.c  attribute_values.h  smt2_commands.c  smt2_hash_keywords.h  smt2_hash_symbols.h  smt2_hash_tokens.h  smt2_lexer.c  smt2_model_printer.c  smt2_parser.c  smt2_printer.c  smt2_term_stack.c
src/frontend/yices/: yices_hash_keywords.h  yices_help.c  yices_lexer.c  yices_parser.c  yices_reval.c  yices_reval.h
src/include/: yices.h  yices_config.h  yices_types.h
src/io/: concrete_value_printer.c  model_printer.c  pretty_printer.c  pretty_printer.h  reader.c  reader.h  simple_printf.c  term_printer.c  tracer.c  tracer.h  type_printer.c  yices_pp.c
src/mcsat/: conflict.c  preprocessor.c  solver.c
src/mcsat/bv/: bv_explainer.c  bv_utils.h
src/mcsat/bv/explain/: eq_ext_con.c  full_bv_sat.c
src/mcsat/nra/: nra_plugin.c  nra_plugin_explain.c
src/model/: abstract_values.c  arith_projection.c  concrete_values.c  fun_trees.c  literal_collector.c  model_eval.c  model_queries.c  model_support.c  models.c  presburger.c  projection.c  val_to_term.c
src/mt/: threads.c  threads.h  threads_posix.c  threads_win.c  yices_locks.c  yices_locks.h  yices_thread_local.h
src/parser_utils/: term_stack2.c  term_stack_error.c  term_stack_error.h  tstack_internals.h
src/scratch/: bool_vartable.c  bool_vartable.h  booleq_table.h  update_graph.c  update_graph.h
src/solvers/bv/: bit_blaster.c  bit_blaster.h  bv_vartable.c  bv_vartable.h  bvexp_table.c  bvpoly_compiler.c  bvpoly_dag.c  bvsolver.c  bvsolver_printer.c  dimacs_printer.c  remap_table.c  remap_table.h
src/solvers/cdcl/: delegate.c  delegate.h  gates_manager.c  gates_manager.h  gates_printer.c  new_gate_hash_map.c  new_gate_hash_map2.c  new_sat_solver.c  new_sat_solver.h  sat_solver.c  sat_solver.cxxx  sat_solver.h  sat_solver_base_types.h  smt_core.c  smt_core.h  smt_core_base_types.h  smt_core_printer.c
src/solvers/egraph/: egraph.c  egraph_base_types.h  egraph_explanations.c  egraph_printer.c  egraph_utils.h
src/solvers/floyd_warshall/: idl_floyd_warshall.c  idl_fw_printer.c  rdl_floyd_warshall.c  rdl_fw_printer.c
src/solvers/funs/: fun_level.c  fun_solver.c  fun_solver_printer.c  stratification.c
src/solvers/quant/: cnstr_learner.c  ef_problem.c  ematch_compile.c  ematch_execute.c  quant_ematching.c  quant_parameters.c  quant_parameters.h  quant_pattern.c  quant_solver.c  term_learner.c
src/solvers/simplex/: arith_vartable.c  arith_vartable.h  diophantine_systems.c  dsolver_printer.c  matrices.c  offset_equalities.c  simplex.c  simplex_printer.c  simplex_propagator0.h  simplex_propagator1.h
src/terms/: bit_expr.c  bit_expr.h  bv64_interval_abstraction.c  bv64_interval_abstraction.h  bv_constants.c  free_var_collector.c  full_subst.c  int_rational_hash_maps.c  int_rational_hash_maps.h  mpq_aux.c  mpq_stores.c  pprod_table.c  term_explorer.c  term_manager.c  term_substitution.c  term_utils.c  terms.c  terms.h  types.c  types.h
src/utils/: assert_utils.h  bitvectors.h  command_line.c  cputime.c  csets.c  error.c  generic_heap.c  indexed_table.c  int_array_sort.c  int_array_sort.h  int_bv_sets.c  int_hash_map2.c  int_hash_map2.h  int_heap.c  memalloc.c  memalloc.h  object_stack.c  string_buffers.c  string_utils.c  string_utils.h  symbol_tables.c  timeout.c  tuple_hash_map.c  tuple_hash_map.h  uint_learner.c  uint_learner.h  uint_rbtrees.h  use_vectors.h
tests/: CMakeLists.txt
tests/unit/: make_seeds.c  sudoku.c  test_abstract_values.c  test_api1.c  test_api10.c  test_api11.c  test_api12.c  test_api13.c  test_api14.c  test_api2.c  test_api3.c  test_api4.c  test_api5.c  test_api6.c  test_api7.c  test_api8.c  test_api9.c  test_arith_buffers.c  test_arith_projection.c  test_assumption_stack.c  test_assumption_table.c  test_attribute_values.c  test_backtrack_int_hash_map.c  test_binary_search.c  test_bit_expr.c  test_bit_tricks.c  test_bool_sort.c  test_bv64_abstraction.c  test_bv64_abstraction2.c  test_bv64_intervals.c  test_bv64_parsing.c  test_bv_intervals.c  test_bvarith64_buffers.c  test_bvarith_buffers.c  test_bvarith_circuits.c  test_bvbounds.c  test_bvcomparators.c  test_bvconst.c  test_bvconst_divisions.c  test_bvdivision.c  (+130 more)
