cmake_minimum_required(VERSION 3.16)
project(yices2)

cmake_policy(SET CMP0003 NEW)
cmake_policy(SET CMP0010 NEW)
cmake_policy(SET CMP0095 NEW)
set(CMAKE_C_STANDARD 17)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON CACHE BOOL "LTO")
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELWITHDEBINFO OFF)
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_DEBUG OFF)
if(WIN32)
  add_compile_options(-MP -vmg)
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Gw -GS-")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -Gw -GS-")
  string(REPLACE "/Zi" "-Z7" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
  string(REPLACE "/Zi" "-Z7" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
else()
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fomit-frame-pointer -fno-stack-protector")
endif()
set(YICES_GMP gmp CACHE STRING "gmp or mpfr lib")

find_package(PkgConfig)
pkg_check_modules(${YICES_GMP} REQUIRED IMPORTED_TARGET ${YICES_GMP})

add_library(yices SHARED
version.cmake
api/context_config.c
api/search_parameters.c
api/smt_logic_codes.c
api/yices_api.c
api/yices_error.c
api/yices_error_report.c
api/yices_release_version.c
api/yices_version_template.txt
api/yval.c
context/assumption_stack.c
context/common_conjuncts.c
context/conditional_definitions.c
context/context.c
context/context_parameters.c
context/context_printer.c
context/context_simplifier.c
context/context_solver.c
context/context_statistics.c
context/context_utils.c
context/divmod_table.c
context/dump_context.c
context/eq_abstraction.c
context/eq_learner.c
context/internalization_printer.c
context/internalization_table.c
context/ite_flattener.c
context/pseudo_subst.c
context/quant_context.c
context/quant_context_utils.c
context/shared_terms.c
context/symmetry_breaking.c
exists_forall/ef_analyze.c
exists_forall/ef_client.c
exists_forall/ef_skolemize.c
exists_forall/ef_values.c
exists_forall/efsolver.c
frontend/common/assumption_table.c
frontend/common/assumptions_and_core.c
frontend/common/bug_report.c
frontend/common/named_term_stacks.c
frontend/common/parameters.c
frontend/common/tables.c
frontend/smt1/smt_keywords.txt
frontend/smt1/smt_hash_keywords.h
frontend/smt1/smt_lexer.c
frontend/smt1/smt_parser.c
frontend/smt1/smt_term_stack.c
frontend/smt2/smt2_hash_tokens.h
frontend/smt2/smt2_tokens.txt
frontend/smt2/smt2_hash_keywords.h
frontend/smt2/smt2_keywords.txt
frontend/smt2/smt2_hash_symbols.h
frontend/smt2/smt2_symbols.txt
frontend/smt2/attribute_values.c
frontend/smt2/parenthesized_expr.c
frontend/smt2/smt2_commands.c
frontend/smt2/smt2_expressions.c
frontend/smt2/smt2_lexer.c
frontend/smt2/smt2_model_printer.c
frontend/smt2/smt2_parser.c
frontend/smt2/smt2_printer.c
frontend/smt2/smt2_symbol_printer.c
frontend/smt2/smt2_term_stack.c
frontend/smt2/smt2_type_printer.c
frontend/yices.c
frontend/yices/arith_solver_codes.c
frontend/yices/labeled_assertions.c
frontend/yices/yices_hash_keywords.h
frontend/yices/yices_keywords.txt
frontend/yices/yices_help.c
frontend/yices/yices_lexer.c
frontend/yices/yices_parser.c
frontend/yices/yices_reval.c
io/concrete_value_printer.c
io/model_printer.c
io/pretty_printer.c
io/reader.c
io/simple_printf.c
io/term_printer.c
io/tracer.c
io/type_printer.c
io/writer.c
io/yices_pp.c
mcsat/no_mcsat.c
mcsat/options.c
model/abstract_values.c
model/arith_projection.c
model/concrete_values.c
model/fresh_value_maker.c
model/fun_maps.c
model/fun_trees.c
model/generalization.c
model/large_bvsets.c
model/literal_collector.c
model/map_to_model.c
model/model_eval.c
model/model_queries.c
model/model_support.c
model/models.c
model/presburger.c
model/projection.c
model/rb_bvsets.c
model/small_bvsets.c
model/term_to_val.c
model/val_to_term.c
mt/threads.c
mt/yices_locks.c
parser_utils/lexer.c
parser_utils/parser.c
parser_utils/term_stack_error.c
parser_utils/term_stack2.c
scratch/bool_vartable.c
scratch/booleq_table.c
scratch/update_graph.c
solvers/bv/bit_blaster.c
solvers/bv/bv_atomtable.c
solvers/bv/bv_intervals.c
solvers/bv/bv_vartable.c
solvers/bv/bv64_intervals.c
solvers/bv/bvconst_hmap.c
solvers/bv/bvexp_table.c
solvers/bv/bvpoly_compiler.c
solvers/bv/bvpoly_dag.c
solvers/bv/bvsolver.c
solvers/bv/bvsolver_printer.c
solvers/bv/dimacs_printer.c
solvers/bv/merge_table.c
solvers/bv/remap_table.c
solvers/cdcl/clause_pool.c
solvers/cdcl/delegate.c
solvers/cdcl/gates_hash_table.c
solvers/cdcl/gates_manager.c
solvers/cdcl/gates_printer.c
solvers/cdcl/new_gate_hash_map.c
solvers/cdcl/new_gate_hash_map2.c
solvers/cdcl/new_gates.c
solvers/cdcl/new_sat_solver.c
solvers/cdcl/sat_solver.c
solvers/cdcl/smt_core.c
solvers/cdcl/smt_core_printer.c
solvers/cdcl/truth_tables.c
solvers/cdcl/wide_truth_tables.c
solvers/egraph/composites.c
solvers/egraph/diseq_stacks.c
solvers/egraph/egraph.c
solvers/egraph/egraph_assertion_queues.c
solvers/egraph/egraph_explanations.c
solvers/egraph/egraph_printer.c
solvers/egraph/egraph_utils.c
solvers/egraph/theory_explanations.c
solvers/floyd_warshall/dl_vartable.c
solvers/floyd_warshall/idl_floyd_warshall.c
solvers/floyd_warshall/idl_fw_printer.c
solvers/floyd_warshall/rdl_floyd_warshall.c
solvers/floyd_warshall/rdl_fw_printer.c
solvers/funs/fun_level.c
solvers/funs/fun_solver.c
solvers/funs/fun_solver_printer.c
solvers/funs/stratification.c
solvers/quant/cnstr_learner.c
solvers/quant/ef_parameters.c
solvers/quant/ef_problem.c
solvers/quant/ematch_compile.c
solvers/quant/ematch_execute.c
solvers/quant/ematch_instance.c
solvers/quant/ematch_instr.c
solvers/quant/ematch_instr_stack.c
solvers/quant/quant_cnstr.c
solvers/quant/quant_ematching.c
solvers/quant/quant_parameters.c
solvers/quant/quant_pattern.c
solvers/quant/quant_solver.c
solvers/quant/term_learner.c
solvers/simplex/arith_atomtable.c
solvers/simplex/arith_vartable.c
solvers/simplex/diophantine_systems.c
solvers/simplex/dsolver_printer.c
solvers/simplex/gomory_cuts.c
solvers/simplex/int_constraint_printer.c
solvers/simplex/integrality_constraints.c
solvers/simplex/matrices.c
solvers/simplex/offset_equalities.c
solvers/simplex/simplex.c
solvers/simplex/simplex_printer.c
solvers/simplex/simplex_prop_table.c
terms/arith_buffers.c
terms/balanced_arith_buffers.c
terms/bit_expr.c
terms/bit_term_conversion.c
terms/bv_constants.c
terms/bv_polynomials.c
terms/bv_slices.c
terms/bv64_constants.c
terms/bv64_interval_abstraction.c
terms/bv64_polynomials.c
terms/bvarith_buffer_terms.c
terms/bvarith_buffers.c
terms/bvarith64_buffer_terms.c
terms/bvarith64_buffers.c
terms/bvfactor_buffers.c
terms/bvlogic_buffers.c
terms/bvpoly_buffers.c
terms/conditionals.c
terms/elim_subst.c
terms/extended_rationals.c
terms/free_var_collector.c
terms/full_subst.c
terms/int_rational_hash_maps.c
terms/ite_stack.c
terms/mpq_aux.c
terms/mpq_stores.c
terms/poly_buffer.c
terms/poly_buffer_terms.c
terms/polynomials.c
terms/power_products.c
terms/pprod_table.c
terms/rational_hash_maps.c
terms/rationals.c
terms/rba_buffer_terms.c
terms/renaming_context.c
terms/subst_cache.c
terms/subst_context.c
terms/term_explorer.c
terms/term_manager.c
terms/term_sets.c
terms/term_substitution.c
terms/term_utils.c
terms/terms.c
terms/types.c
terms/variable_renaming.c
utils/arena.c
utils/backtrack_arrays.c
utils/backtrack_int_hash_map.c
utils/cache.c
utils/command_line.c
utils/cputime.c
utils/csets.c
utils/dep_tables.c
utils/gcd.c
utils/generic_heap.c
utils/hash_functions.c
utils/index_vectors.c
utils/int_array_hsets.c
utils/int_array_sort.c
utils/int_array_sort2.c
utils/int_bags.c
utils/int_bv_sets.c
utils/int_harray_store.c
utils/int_hash_classes.c
utils/int_hash_map.c
utils/int_hash_map2.c
utils/int_hash_sets.c
utils/int_hash_tables.c
utils/int_heap.c
utils/int_heap2.c
utils/int_partitions.c
utils/int_powers.c
utils/int_queues.c
utils/int_stack.c
utils/int_vectors.c
utils/mark_vectors.c
utils/memalloc.c
utils/memsize.c
utils/object_stack.c
utils/object_stores.c
utils/pair_hash_map.c
utils/pair_hash_map2.c
utils/pair_hash_sets.c
utils/pointer_vectors.c
utils/ptr_array_sort.c
utils/ptr_array_sort2.c
utils/ptr_hash_classes.c
utils/ptr_hash_map.c
utils/ptr_heap.c
utils/ptr_partitions.c
utils/ptr_queues.c
utils/ptr_sets.c
utils/ptr_sets2.c
utils/ptr_stack.c
utils/ptr_vectors.c
utils/refcount_int_arrays.c
utils/refcount_strings.c
utils/resize_arrays.c
utils/simple_cache.c
utils/simple_int_stack.c
utils/sparse_arrays.c
utils/stable_sort.c
utils/string_buffers.c
utils/string_hash_map.c
utils/string_utils.c
utils/symbol_tables.c
utils/tag_map.c
utils/timeout.c
utils/tuple_hash_map.c
utils/uint_array_sort.c
utils/uint_array_sort2.c
utils/uint_learner.c
utils/uint_rbtrees.c
utils/union_find.c
utils/use_vectors.c
utils/vector_hash_map.c
)
target_include_directories(yices PRIVATE . include)
target_compile_definitions(yices PRIVATE PER_THREAD_STATE THREAD_SAFE $<$<BOOL:${WIN32}>:MINGW>)
target_link_libraries(yices PUBLIC PkgConfig::${YICES_GMP})
